--- a/src/ios/GoogleService-Info.plist
+++ b/src/ios/GoogleService-Info.plist
@@ -2,5 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>198305422126-vo9a8e609t0he3jcl636kq21odlktqqa.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.198305422126-vo9a8e609t0he3jcl636kq21odlktqqa</string>
+	<key>API_KEY</key>
+	<string>AIzaSyAcP3QNepdcBU0N17UxQUGMO1F6HnLa058</string>
+	<key>GCM_SENDER_ID</key>
+	<string>198305422126</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>com.pjmasks.racingheroes</string>
+	<key>PROJECT_ID</key>
+	<string>pj-masks-racing-heroes-46b5d</string>
+	<key>STORAGE_BUCKET</key>
+	<string>pj-masks-racing-heroes-46b5d.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<true></true>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<false></false>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:198305422126:ios:723f44efe2742b7e</string>
+	<key>DATABASE_URL</key>
+	<string>https://pj-masks-racing-heroes-46b5d.firebaseio.com</string>
 </dict>
 </plist>
